--- a/src/app/pages/facebook/my-publications/my-publications.component.html
+++ b/src/app/pages/facebook/my-publications/my-publications.component.html
@@ -21,24 +21,28 @@
   
                   <div class="col-md-6 scrollClass" (scroll)="onScroll()">
                     <mat-card class="example-card" *ngFor="let post of posts" [@pageTransition]>
+                      
+                      <div class="derecha">
+                        <button [matMenuTriggerFor]="menu"  mat-icon-button color="link">
+                          <mat-icon>more_vert</mat-icon>
+                        </button>
+                          <mat-menu #menu="matMenu" class="">
+                            <button mat-menu-item (click)="editPost(post.idPost)">
+                              <mat-icon>edit</mat-icon>
+                              <span>Editar</span>
+                            </button>
+                            
+                            <button mat-menu-item (click)="deletePost(post.idPost)">
+                              <mat-icon>delete</mat-icon>
+                              <span>Eliminar</span>
+                            </button>
+                          </mat-menu>
+                      </div>
+
                       <mat-card-header>
                         <div mat-card-avatar class="example-header-image"
                           style="background-image:url('{{post.user.avatar}}')"></div>
-                        <mat-card-title>{{post.user.name}} {{post.user.fatherLastName}} {{post.user.motherLastName}}<button [matMenuTriggerFor]="menu"  mat-icon-button color="link">
-                          <mat-icon>more_vert</mat-icon>
-                        </button>
-                        <mat-menu #menu="matMenu">
-                          <button mat-menu-item (click)="editPost(post.idPost)">
-                            <mat-icon>edit</mat-icon>
-                            <span>Editar</span>
-                          </button>
-                          
-                          <button mat-menu-item (click)="deletePost(post.idPost)">
-                            <mat-icon>delete</mat-icon>
-                            <span>Eliminar</span>
-                          </button>
-                        </mat-menu>
-                          
+                        <mat-card-title>{{post.user.name}} {{post.user.fatherLastName}} {{post.user.motherLastName}}
                         </mat-card-title>
                         <mat-card-subtitle>{{post.dateRegistration | date: 'dd-MMMM-yyyy'}}</mat-card-subtitle>
                       </mat-card-header>
